fixing alignment between cells and row-headers

--- a/src/main.less
+++ b/src/main.less
@@ -166,7 +166,6 @@
 	}
   .grid-cells{
     position: relative;
-    overflow: visible;
   }
 	.grid-cells-header {
 		padding: 0px;
@@ -174,10 +173,6 @@
 
 	.grid-cells-title {
 		min-width: 522px;
-	}
-
-	.grid-cells:before {
-		content: "\00a0";
 	}
 
   .grid {
